--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
             <version>3.22.0-GA</version>
         </dependency>
       
-        <!-- Java web API -->     
+        <!-- Java web API -->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -108,7 +108,19 @@
             <artifactId>spring-context-support</artifactId>
             <version>4.3.9.RELEASE</version>
         </dependency>
-         
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
+  
+        <!-- Log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        
         <!-- Servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
